# CFD

./: .gitignore  README.md
project/: CFD.APS  CFD.filters  CFD.qrc  CFD.sln  CFD.vcxproj  CFD.vcxproj.filters  DefaultSolver.h  Exporter.h  IExport.h  ISolve.h  IVisualize.h  Project.h  SaveAsImage.cpp  SaveAsImage.h  SaveAsTable.cpp  SolverConfig.h  StartupWindow.cpp  StartupWindow.h  Visualisator.cpp  Visualisator.h
project/setup/: setup.vdproj
project/setup/Debug/: CFD Setup.msi
project/setup/Release/: CFD Setup.msi
src/: Application.cxx  CMakeLists.txt  MainWindow.cxx  MainWindow.h  MainWindow.ui  Resource.qrc
src/app/: Application.cxx  Converter.cpp  Converter.h  DefaultSolver.cpp  DefaultSolver.h  FEMSolver.cpp  FEMSolver.h  FVMSolver.cpp  FVMSolver.h  ISolve.h  IVisualize.h  MeshConfig.h  MeshGenerator.cpp  MeshGenerator.h  Project.cpp  Project.h  ProjectConfig.h  ProjectManager.h  SPHSolver.cpp  SPHSolver.h  SaveAsTable.h  SolverConfig.cpp  SolverConfig.h  SolverResult.h  Visualizator.cpp  Visualizator.h  Visualizer.cpp  Visualizer.h
src/gui/: MainWindow.cxx  MainWindow.h  MainWindow.ui  MeshAlgorithm3DModel.cpp  MeshAlgorithm3DModel.h  MeshAlgorithmModel.cpp  MeshAlgorithmModel.h  MeshRecombinationAlgorithm.cpp  MeshRecombinationAlgorithm.h  MeshSubdivisionAlgorithm.cpp  MeshSubdivisionAlgorithm.h  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  StartupWindow.cpp  StartupWindow.h  StartupWindow.ui
src/res/: Resource.qrc
